@@ -2,7 +2,7 @@
 // Licensed under the GNU GPL Version 2.
 //
 // First added:  2005-01-28
-// Last changed: 2006-08-08
+// Last changed: 2006-08-21
 
 #include <dolfin/dolfin_log.h>
 #include <dolfin/dolfin_math.h>
@@ -60,10 +60,7 @@ void MonoAdaptiveNewtonSolver::start()
 
   // Precompute product M*u0
   if ( implicit )
-  {
-    ts.copy(ts.u0, 0, ts.u, 0, ts.N);
-    ode.M(ts.u, Mu0, ts.u, ts.starttime());
-  }
+    ode.M(ts.u0, Mu0, ts.u0, ts.starttime());
 
   //debug();
   //A.disp(true, 10);
@@ -136,7 +133,7 @@ void MonoAdaptiveNewtonSolver::FevalExplicit(uBlasVector& F)
 
     // Reset values to initial data
     for (uint i = 0; i < ts.N; i++)
-      F(noffset + i) = ts.u0[i];
+      F(noffset + i) = ts.u0(i);
     
     // Add weights of right-hand side
     for (uint m = 0; m < method.qsize(); m++)
@@ -196,8 +193,7 @@ void MonoAdaptiveNewtonSolver::FevalImplicit(uBlasVector& F)
     // Do multiplication
     if ( piecewise )
     {
-      ts.copy(ts.u0, 0, ts.u, 0, ts.N);
-      ode.M(xx, yy, ts.u, a);
+      ode.M(xx, yy, ts.u0, a);
     }
     else
     {
