@@ -163,7 +163,7 @@ void MultiAdaptivity::computeResiduals(MultiAdaptiveTimeSlab& ts)
 
       // Get initial value for element
       const int ep = ts.ee[e];
-      const real x0 = ( ep != -1 ? ts.jx[ep*method.nsize() + method.nsize() - 1] : ts.u0[i] );
+      const real x0 = ( ep != -1 ? ts.jx[ep*method.nsize() + method.nsize() - 1] : ts.u0(i) );
       
       // Evaluate right-hand side at quadrature points of element
       if ( method.type() == Method::cG )
