@@ -2,7 +2,7 @@
 // Licensed under the GNU GPL Version 2.
 //
 // First added:  2005-01-27
-// Last changed: 2006-08-08
+// Last changed: 2006-08-21
 
 #include <dolfin/dolfin_math.h>
 #include <dolfin/uBlasVector.h>
@@ -61,7 +61,7 @@ void UpdatedMultiAdaptiveJacobian::init()
   // Compute size of increment
   real umax = 0.0;
   for (unsigned int i = 0; i < ts.N; i++)
-    umax = std::max(umax, std::abs(ts.u0[i]));
+    umax = std::max(umax, std::abs(ts.u0(i)));
   h = std::max(DOLFIN_SQRT_EPS, DOLFIN_SQRT_EPS * umax);
 }
 //-----------------------------------------------------------------------------
