@@ -2,19 +2,19 @@
 // Licensed under the GNU GPL Version 2.
 //
 // First added:  2005-05-02
-// Last changed: 2006-07-06
+// Last changed: 2006-08-21
 
 #ifndef __TIME_SLAB_H
 #define __TIME_SLAB_H
 
 #include <dolfin/constants.h>
+#include <dolfin/uBlasVector.h>
 
 namespace dolfin
 {
 
   class ODE;
   class Method;
-  class uBlasVector;
 
   /// This is the base class for time slabs, the collections of
   /// degrees of freedom for the solution of an ODE between two
@@ -99,7 +99,7 @@ namespace dolfin
     
     ODE& ode;             // The ODE
     const Method* method; // Method, mcG(q) or mdG(q)  
-    real* u0;             // Initial values
+    uBlasVector u0;       // Initial values
     
     bool save_final; // True if we should save the solution at final time
 
